<resources>
    <string name="app_name">Musicfy</string>


    <string name="text_pass">Contraseña</string>
    <string name="text_email">Correo electrónico</string>
    <string name="text_register">Registrarse</string>
    <string name="text_login">Iniciar sesión</string>
    <string name="text_outer">INICIO DE SESIÓN</string>

    <string name="text_add_track">AGREGAR CANCIÓN</string>
    <string name="text_track_name">Nombre de la canción</string>
    <string name="text_track_author">Autor</string>
    <string name="text_track_album">Album</string>
    <string name="text_track_duration">Duración</string>
    <string name="text_track_audio_source">Ruta de origen de audio (URL)</string>
    <string name="text_track_cover_image_source">Ruta de origen de portada (URL)</string>

    <string name="text_add_track_button">Agregar canción</string>
    <string name="text_add_track_success">Canción agregada con éxito</string>
    <string name="text_add_track_error">Error al agregar canción</string>


    <string name="title_activity_inner_platform">InnerPlatform</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_track_list">Lista de canciones</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_add_track">Agregar canción</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>